[package]
name = "rs-merkletree"
description = "Rust library to create Merkle Trees"
version = "0.1.0"
authors = ["Varun Doshi <doshivarun202@gmail.com>"]
readme = "README.md"
keywords = ["merkle", "data structures", "cryptography","hash"]
categories = ["cryptography", "data-structures","development-tools::testing"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
